# shredtools

./: README.md  app.py  fasta_download.js  index.html  pyproject.toml  pytest.ini
archive/: mum_to_graph.py
browser/: app.py  build_gene_index.py  bumbl_index_utils.py  index.html  lengths_to_json.py  pangenome_lengths.json  synteny_plot.py  viz_mums.py
bumbl_index/: bumbl_index.md
hprcv2_pyodide_browser/: app.py  bumbl_index_utils.py  hprcv2_enhanced_merged.lengths  index.html  synteny_plot.py
scripts/: run_tests.sh
shredtools/: __main__.py  cli.py  enhance.py  extract_fastas.py  extract_from_mums.py  filter_collinear.py  index_bumbl.py  parallel_faidx_extract.py  shred_from_mums.py  sort_bumbl.py  stats.py  subset_from_mums.py  utils.py
test_data/: README.md
tests/: README.md  _probe_hg_edges.py  _probe_stale.py  conftest.py  hg_edge_regions.py  test_cli.py  test_extract.py  test_hg_edges.py  test_index.py  test_shred_enhance_fasta.py  test_sort_filter.py  test_stale_index.py  test_stats.py  test_subset.py  test_utils.py
