[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shredtools"
version = "0.1.0"
description = "Utilities for manipulating the pangenome coordinate system with multi-MUMs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pysam",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
plot = ["matplotlib"]

[project.scripts]
shredtools = "shredtools.cli:main"

[tool.setuptools]
packages = ["shredtools"]

