[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shredtools"
version = "0.1.0"
description = "Utilities for manipulating the pangenome coordinate system with multi-MUMs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Vikram Shivakumar", email = "vs632@cam.ac.uk" }]
dependencies = [
    "numpy",
    "pysam",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/vikshiv/shredtools"
Repository = "https://github.com/vikshiv/shredtools"
Issues = "https://github.com/vikshiv/shredtools/issues"

[project.optional-dependencies]
plot = ["matplotlib"]

[project.scripts]
shredtools = "shredtools.cli:main"

[tool.setuptools]
packages = ["shredtools"]
